--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
   "description": "Basic Template (基础模板 React Native 0.59 TS 版本)",
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.0.3",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.0.4",
     "events": "^1.1.1",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "moment": "^2.20.1",
     "prop-types": "^15.6.1",
     "react": "16.8.6",
     "react-addons-shallow-compare": "^15.6.2",
-    "react-native": "0.59.5",
+    "react-native": "0.59.10",
+    "react-native-art-hcdwave": "^0.0.5",
     "react-native-chart-kit": "^6.11.0",
     "react-native-circular-picker": "^1.0.6",
     "react-native-circular-slider": "^1.0.1",
@@ -38,15 +43,22 @@
     "react-native-elements": "^3.4.2",
     "react-native-elements-universe": "^0.0.0",
     "react-native-fusioncharts": "^5.1.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^12.0.3",
     "react-native-modal-datetime-picker": "^10.2.0",
+    "react-native-modals": "^0.22.3",
+    "react-native-pager-view": "^5.4.0",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.3.0",
+    "react-native-screens": "^3.5.0",
     "react-native-selectmultiple-button": "^0.1.105",
-    "react-native-svg": "5.5.1",
+    "react-native-svg": "^5.5.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.6.6",
     "react-redux": "^7.2.1",
+    "react-wavify": "^1.5.3",
     "react-weekday-picker": "^1.0.8",
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
@@ -85,6 +97,7 @@
     "eslint-plugin-react-native": "^3.10.0",
     "husky": "^4.3.0",
     "jest": "^22.1.1",
+    "jetifier": "^2.0.0",
     "metro-react-native-babel-preset": "^0.63.0",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "^16.8.6",
