--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/bottom-tabs": "^6.0.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.4",
+    "base64-js": "^1.5.1",
     "events": "^1.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.20.1",
@@ -44,6 +45,7 @@
     "react-native-elements-universe": "^0.0.0",
     "react-native-fusioncharts": "^5.1.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^12.0.3",
     "react-native-modal-datetime-picker": "^10.2.0",
